--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
     sdk: flutter
   percent_indicator: ^2.1.3
   flutter_gradients: ^0.0.1
-
+  firebase_core:
+  firebase_auth: ^0.16.1
+  cloud_firestore:
+  google_sign_in: ^4.5.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
