--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flare_flutter:
+  transformer_page_view:
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,10 @@ flutter:
   assets:
   - assets/food.json
   - assets/foodssplash.flr
+  - assets/loadingscreen.png
+  - assets/onboarding1.jpg
+  - assets/onboarding2.png
+  - assets/onboarding3.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
