--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   flare_flutter:
   transformer_page_view:
+  font_awesome_flutter: ^8.8.1
+  wave: ^0.0.8
 
 dev_dependencies:
   flutter_test:
