--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   transformer_page_view:
   font_awesome_flutter: ^8.8.1
   wave: ^0.0.8
+  flutter_facebook_login: ^1.1.1
 
 dev_dependencies:
   flutter_test:
