--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_gradients: ^0.0.1
   firebase_core:
   firebase_auth: ^0.16.1
-  cloud_firestore:
+  cloud_firestore: ^0.13.6
   google_sign_in: ^4.5.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
