--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   wave: ^0.0.8
   flutter_facebook_login: ^1.1.1
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
