--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,13 @@ dependencies:
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.6
   google_sign_in: ^4.5.1
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flare_flutter:
   transformer_page_view:
   font_awesome_flutter: ^8.8.1
   wave: ^0.0.8
   shared_preferences:
+  url_launcher: ^5.4.11
   flutter_facebook_login:
     git:
       url: https://github.com/roughike/flutter_facebook_login
