--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flare_flutter:
   transformer_page_view:
+  social_media_widgets:
   font_awesome_flutter: ^8.8.1
   wave: ^0.0.8
   shared_preferences:
